[gd_scene load_steps=38 format=3 uid="uid://dmkbx4xm8x5gj"]

[ext_resource type="Texture2D" uid="uid://b1a2edb171we5" path="res://assets/sprites/cocoa/cocoa_idle.png" id="1_i25c7"]
[ext_resource type="Script" path="res://scripts/npc.gd" id="1_yig3m"]
[ext_resource type="Texture2D" uid="uid://0df2sorbbt5a" path="res://assets/sprites/npcs/burger_king.png" id="2_ybuu1"]
[ext_resource type="Texture2D" uid="uid://vy144rcdcao5" path="res://assets/sprites/honey/honey_idle.png" id="3_1fldq"]
[ext_resource type="Texture2D" uid="uid://c2eooltsvx4vo" path="res://assets/sprites/npcs/holy_cow_idle.png" id="3_lnb3f"]
[ext_resource type="Texture2D" uid="uid://cq83vg36c3ex7" path="res://assets/sprites/npcs/Dairy_Godmother.png" id="3_txwwv"]
[ext_resource type="Texture2D" uid="uid://ckenbiyu8cf2x" path="res://assets/sprites/npcs/cowstruction_worker.png" id="3_wkdic"]
[ext_resource type="FontFile" uid="uid://s15272omc2m3" path="res://assets/retro.ttf" id="5_1qn2o"]
[ext_resource type="Texture2D" uid="uid://bg4jyo6hqc5r6" path="res://assets/sprites/npcs/dairy_queen.png" id="5_7ywpa"]
[ext_resource type="Texture2D" uid="uid://3s1s0hs5xpbw" path="res://assets/textures/questionmark.png" id="5_d2xyr"]
[ext_resource type="Texture2D" uid="uid://w6ppd7rjs8dk" path="res://assets/sprites/npcs/moogician_idle.png" id="5_pi8fs"]
[ext_resource type="Texture2D" uid="uid://cc8bawglkbwtg" path="res://assets/textures/exclamation.png" id="6_flmcy"]
[ext_resource type="Texture2D" uid="uid://bd4u66grdenac" path="res://assets/sprites/npcs/Mademooiselle.png" id="6_ygu5s"]
[ext_resource type="AudioStream" uid="uid://djxygndl5wfw0" path="res://assets/sound/sfx/emotion.wav" id="8_6pnyp"]
[ext_resource type="AudioStream" uid="uid://dtdvh7lypeh8n" path="res://assets/sound/JENNA MODE/jenna_bing.wav" id="9_8cyrs"]
[ext_resource type="Texture2D" uid="uid://dc43y7hd5pymc" path="res://assets/sprites/npcs/sir_loincelot.png" id="10_greoa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bgk4y"]
atlas = ExtResource("2_ybuu1")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ach6i"]
atlas = ExtResource("2_ybuu1")
region = Rect2(135, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_udb4f"]
atlas = ExtResource("1_i25c7")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_barlc"]
atlas = ExtResource("1_i25c7")
region = Rect2(135, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay5n4"]
atlas = ExtResource("3_txwwv")
region = Rect2(0, 0, 112, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6c01"]
atlas = ExtResource("3_txwwv")
region = Rect2(112, 0, 112, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_vilre"]
atlas = ExtResource("5_7ywpa")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tyj4"]
atlas = ExtResource("5_7ywpa")
region = Rect2(135, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyb5t"]
atlas = ExtResource("3_lnb3f")
region = Rect2(0, 0, 135, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_kte4w"]
atlas = ExtResource("3_lnb3f")
region = Rect2(135, 0, 135, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqhtv"]
atlas = ExtResource("3_1fldq")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r05u"]
atlas = ExtResource("3_1fldq")
region = Rect2(135, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_gly48"]
atlas = ExtResource("6_ygu5s")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_oferx"]
atlas = ExtResource("6_ygu5s")
region = Rect2(135, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6bjb"]
atlas = ExtResource("5_pi8fs")
region = Rect2(0, 0, 112, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqja5"]
atlas = ExtResource("5_pi8fs")
region = Rect2(112, 0, 112, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_wogpn"]
atlas = ExtResource("10_greoa")
region = Rect2(0, 0, 135, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8k2x"]
atlas = ExtResource("10_greoa")
region = Rect2(135, 0, 135, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv5pd"]
atlas = ExtResource("3_wkdic")
region = Rect2(0, 0, 135, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hwib"]
atlas = ExtResource("3_wkdic")
region = Rect2(135, 0, 135, 78)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0g3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgk4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ach6i")
}],
"loop": true,
"name": &"Burger King",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udb4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_barlc")
}],
"loop": true,
"name": &"Cocoa",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay5n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6c01")
}],
"loop": true,
"name": &"Dairy Godmother",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vilre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tyj4")
}],
"loop": true,
"name": &"Dairy Queen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyb5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kte4w")
}],
"loop": true,
"name": &"Holy Cow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqhtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r05u")
}],
"loop": true,
"name": &"Honey",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gly48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oferx")
}],
"loop": true,
"name": &"Mademooiselle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6bjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqja5")
}],
"loop": true,
"name": &"Moogician",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wogpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8k2x")
}],
"loop": true,
"name": &"Sir Loincelot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv5pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hwib")
}],
"loop": true,
"name": &"Worker",
"speed": 5.0
}]

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_yig3m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(68, -40)
sprite_frames = SubResource("SpriteFrames_h0g3n")
animation = &"Holy Cow"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(224, -9)
polygon = PackedVector2Array(-120, -69, -195, -67, -196, 11, -123, 11)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 28.0
offset_top = -100.0
offset_right = 105.0
offset_bottom = -82.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 32.0
offset_top = -98.0
offset_right = 101.0
offset_bottom = -84.0
color = Color(0.0923971, 0.0923971, 0.0923971, 1)

[node name="Label" type="Label" parent="."]
offset_left = 32.0
offset_top = -101.0
offset_right = 101.0
offset_bottom = -81.0
theme_override_fonts/font = ExtResource("5_1qn2o")
text = "Name"
horizontal_alignment = 1

[node name="Questionmark" type="Sprite2D" parent="."]
visible = false
position = Vector2(67, -147)
scale = Vector2(0.875, 1)
texture = ExtResource("5_d2xyr")

[node name="Exclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(68, -145)
texture = ExtResource("6_flmcy")

[node name="EmotionIndicator" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6pnyp")
volume_db = 5.601
bus = &"Sfx"

[node name="JENNAEmotionIndicator" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8cyrs")
volume_db = 10.0
bus = &"JENNA MODE"
